infrastructure/Kubernetes/codebrothers-services-auth-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codebrothers-services-auth
  labels:
    app: codebrothers-services-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: codebrothers-services-auth
  template:
    metadata:
      labels:
        app: codebrothers-services-auth
    spec:
      containers:
        - name: codebrothers-services-auth
          image: localhost:32000/codebrothers-services-auth:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: codebrothers-services-auth
  labels:
    app: codebrothers-services-auth
spec:
  selector:
    app: codebrothers-services-auth
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8082
