infrastructure/Kubernetes/codebrothers-services-customer-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codebrothers-services-customer
  labels:
    app: codebrothers-services-customer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: codebrothers-services-customer
  template:
    metadata:
      labels:
        app: codebrothers-services-customer
    spec:
      containers:
        - name: codebrothers-services-customer
          image: localhost:32000/codebrothers-services-customer:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: codebrothers-services-customer
  labels:
    app: codebrothers-services-customer
spec:
  selector:
    app: codebrothers-services-customer
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
