infrastructure/Kubernetes/pgadmin-code-brother-deploy.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: pgadmin-code-brother
spec:
  selector:
    matchLabels:
      app: pgadmin-code-brother
  template:
    metadata:
      labels:
        app: pgadmin-code-brother
    spec:
      containers:
      - name: pgadmin-code-brother
        image: 'dpage/pgadmin4'
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-code-brother
  labels:
    app: pgadmin-code-brother
spec:
  selector:
    app: pgadmin-code-brother
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
