infrastructure/Kubernetes/postgresql-code-brother-deploy.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: postgresql-code-brother
spec:
  selector:
    matchLabels:
      app: postgresql-code-brother
  template:
    metadata:
      labels:
        app: postgresql-code-brother
    spec:
      containers:
      - name: postgresql-code-brother
        image: postgres:alpine
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgresql-code-brother
      volumes:
        - name: postgresql-code-brother
          persistentVolumeClaim:
            claimName: postgresql-code-brother
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-code-brother
  labels:
    app: postgresql-code-brother
spec:
  selector:
    app: postgresql-code-brother
  type: LoadBalancer
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
