infrastructure/Kubernetes/codebrothers-services-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: codebrothers-services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
# expoem na porta 80, quando houver uma requisição
# http://codebrothers-services-customer será direcionado 
# para o microserviço no K8S registrodo no serviceName
  - host: codebrothers-services-customer
    http:
      paths:
      - backend:
          serviceName: codebrothers-services-customer
          servicePort: 80
# expoem na porta 80, quando houver uma requisição
# http://codebrothers-services-auth será direcionado 
# para o microserviço no K8S registrodo no serviceName
  - host: codebrothers-services-auth
    http:
      paths:
      - backend:
          serviceName: codebrothers-services-auth
          servicePort: 80
